# pgroonga

./: meson.build  meson_options.txt
.github/workflows/: linux.yml  package.yml  windows.yml
expected/full-text-search/text/options/normalizer/: none.out
expected/full-text-search/varchar/query-v2/partitioning/: many-partition.out
expected/regexp/text-array/regexp-v2/null/: indexscan.out
expected/regexp/text/regexp-in/null/: indexscan.out  seqscan.out
expected/regexp/varchar/regexp-v2/null/: indexscan.out
expected/term-search/varchar-array/contain/: bitmapscan.out  indexscan.out
pgrn-pgxs/: meson.build
pgroonga-check/: meson.build
sql/full-text-search/text/options/tokenizer/: none.sql
sql/function/list-broken-indexes/: nothing.sql
sql/term-search/varchar-array/contain/: bitmapscan.sql
test/: prepare.rb
